tests/baselines/reference/controlFlowNoImplicitAny.errors.txt
tests/cases/compiler/controlFlowNoImplicitAny.ts(93,9): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
tests/cases/compiler/controlFlowNoImplicitAny.ts(102,19): error TS7005: Variable 'x' implicitly has an 'any' type.
tests/cases/compiler/controlFlowNoImplicitAny.ts(107,9): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
tests/cases/compiler/controlFlowNoImplicitAny.ts(116,19): error TS7005: Variable 'x' implicitly has an 'any' type.


==== tests/cases/compiler/controlFlowNoImplicitAny.ts (4 errors) ====
    
    declare let cond: boolean;
    
    function f1() {
        let x;
        if (cond) {
            x = 1;
        }
        if (cond) {
            x = "hello";
        }
        const y = x;
    }
    
    function f2() {
        let x = undefined;
        if (cond) {
            x = 1;
        }
        if (cond) {
            x = "hello";
        }
        const y = x;
    }
    
    function f3() {
        let x = null;
        if (cond) {
            x = 1;
        }
        if (cond) {
            x = "hello";
        }
        const y = x;
    }
    
    function f4() {
        let x: any;
        if (cond) {
            x = 1;
        }
        if (cond) {
            x = "hello";
        }
        const y = x;
    }
    
    function f5() {
        var x;
        if (cond) {
            x = 1;
        }
        if (cond) {
            x = "hello";
        }
        const y = x;
    }
    
    function f6() {
        var x = undefined;
        if (cond) {
            x = 1;
        }
        if (cond) {
            x = "hello";
        }
        const y = x;
    }
    
    function f7() {
        var x = null;
        if (cond) {
            x = 1;
        }
        if (cond) {
            x = "hello";
        }
        const y = x;
    }
    
    function f8() {
        var x: any;
        if (cond) {
            x = 1;
        }
        if (cond) {
            x = "hello";
        }
        const y = x;
    }
    
    function f9() {
        let x;
            ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
        if (cond) {
            x = 1;
        }
        if (cond) {
            x = "hello";
        }
        const y = x;
        function f() {
            const z = x;
                      ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
        }
    }
    
    function f10() {
        let x;
            ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
        if (cond) {
            x = 1;
        }
        if (cond) {
            x = "hello";
        }
        const y = x;
        const f = () => {
            const z = x;
                      ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
        };
    }